# hqr-generate

./: .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.browser.js  index.bundler.js  index.d.ts  index.node.js  index.web.d.ts  index.web.js  package-lock.json  package.json  tsconfig.react.json
bundler/: index.js  react.d.ts  react.js
react/: index.d.ts  index.js  useDecode.d.ts  useDecode.js  useGenerate.d.ts  useGenerate.js  useGenerateSvg.d.ts  useGenerateSvg.js  useQrDecodeFromImageData.d.ts  useQrDecodeFromImageData.js  useQrDecodeFromImageSrc.d.ts  useQrDecodeFromImageSrc.js  useQrPngBlobUrl.d.ts  useQrPngBlobUrl.js  useQrPngDataUrl.d.ts  useQrPngDataUrl.js
react-src/: useDecode.ts  useGenerate.ts  useGenerateSvg.ts
src/: error.rs  lib.rs  wasm.rs
src/core/: generate.rs  mod.rs  types.rs
src/core/decode/: impl_.rs  mod.rs
src/render/: jpg.rs  mod.rs  png.rs  svg.rs  webp.rs
