[package]
name = "hqr-generate"
version = "0.2.0"
edition = "2024"
description = "Stable black/white QR code generator (PNG data URL) powered by Rust + WASM"
license = "MIT"
repository = "https://github.com/wirunrom/hqr-generate"

[lib]
name = "hqr_generate"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
qrcode = "0.14"
png = "0.17"
base64 = "0.22"
