[package]
name = "hqr-generate"
version = "0.4.4"
edition = "2024"
description = "Stable black/white QR code generator (PNG data URL) powered by Rust + WASM"
license = "MIT"
repository = "https://github.com/wirunrom/hqr-generate"

[lib]
name = "hqr_generate"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["generate"]

generate = []
decode = ["dep:image", "dep:rqrr"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys       = { version = "0.3", optional = true }
qrcode = "0.14"
png    = "0.17"
image = { version = "0.25", optional = true }
rqrr  = { version = "0.7", optional = true }
